--- a/images/php/7.4/Dockerfile
+++ b/images/php/7.4/Dockerfile
@@ -1,6 +1,8 @@
-FROM devilbox/php-fpm-7.4
+FROM php:7.4-fpm
 
 RUN apt-get update && apt-get install -y \
+  zlib1g-dev \
+  g++ \
   curl \
   cron \
   git \
@@ -23,7 +25,8 @@ RUN apt-get install -y \
   libcurl4-openssl-dev \
   libonig-dev
 
-RUN docker-php-ext-configure gd --with-freetype --with-jpeg
+RUN docker-php-ext-configure gd --with-freetype --with-jpeg \
+  && docker-php-ext-configure zip
 
 RUN docker-php-ext-install \
   bcmath \
@@ -52,9 +55,9 @@ RUN docker-php-ext-install \
   sysvshm 
 
 RUN pecl channel-update pecl.php.net \
-  && pecl install xdebug
+  && pecl install xdebug apcu 
 
-RUN docker-php-ext-enable xdebug \
+RUN docker-php-ext-enable xdebug apcu\
   && sed -i -e 's/^zend_extension/\;zend_extension/g' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
 ## Replace next lines with below commented out version once issue is resolved
@@ -72,7 +75,7 @@ RUN groupadd -g 1000 app \
 
 #Install grunt
 RUN apt-get install -y gnupg \
-  && curl -sL https://deb.nodesource.com/setup_10.x | bash - \
+  && curl -sL https://deb.nodesource.com/setup_15.x | bash - \
   && apt-get install -y nodejs \
   && mkdir /var/www/.config /var/www/.npm \
   && chown app:app /var/www/.config /var/www/.npm \
@@ -91,18 +94,13 @@ RUN go get github.com/mailhog/mhsendmail \
 #   && mv mhsendmail_linux_amd64 /usr/local/bin/mhsendmail
 
 #Install composer
-RUN curl -sS https://getcomposer.org/installer | \
-  php -- --version=1.9.0 --install-dir=/usr/local/bin --filename=composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 #Install Blackfire (Optional)
 #RUN curl -s https://packages.blackfire.io/gpg.key | apt-key add - \
 #  && echo "deb http://packages.blackfire.io/debian any main" | tee /etc/apt/sources.list.d/blackfire.list \
 #  && apt-get update \
 #  && apt-get install blackfire-agent blackfire-php
-
-#RUN printf '* *\t* * *\tapp\t%s/usr/local/bin/php /var/www/html/update/cron.php\n' >> /etc/crontab \
-#  && printf '* *\t* * *\tapp\t%s/usr/local/bin/php /var/www/html/bin/magento cron:run\n' >> /etc/crontab \
-#  && printf '* *\t* * *\tapp\t%s/usr/local/bin/php /var/www/html/bin/magento setup:cron:run\n#\n' >> /etc/crontab
 
 COPY conf/www.conf /usr/local/etc/php-fpm.d/
 COPY conf/php.ini /usr/local/etc/php/
