--- a/images/nginx/1.19/conf/default.conf
+++ b/images/nginx/1.19/conf/default.conf
@@ -16,7 +16,7 @@ server {
     fastcgi_buffer_size 64k;
     fastcgi_buffers 8 128k;
 
-    root /var/www/html;
+    root /var/www/html/public;
     index index.php index.html index.htm;
 
     location / {
